protocolmodel/mcrl2/testing/errors/error_5002.mcf
% E5002 - Invalid server info
[true* . LOG_ERROR(E5002)] false